added basic mail function and api call
