# public/docs/openapi.yaml
@@ -121,8 +121,8 @@ paths:
         - Endpoints
   /api/users:
     post:
-      summary: "User API\nGet all the user by pagination"
-      description: ''
+      summary: 'User API'
+      description: 'Get all users by pagination'
       parameters:
         -
           in: header
@@ -159,6 +159,75 @@ paths:
                   type: integer
                   description: 'Page number for pagination.'
                   example: 1
+  /api/getEmployees:
+    post:
+      summary: 'Get Employee API'
+      description: 'Get employee details'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                page:
+                  type: integer
+                  description: 'Page number for pagination.'
+                  example: 1
+  /api/employees:
+    post:
+      summary: 'Employee API'
+      description: 'Employee details'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
 tags:
   -
     name: Endpoints
